--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <title>CodersLab</title>
 </head>
 <body>
-    <div class="board">
 
+    <div class="plansza">
+    
     </div>
+    <div class="moves"></div>
 
-    <div class="punctation">
-
-    </div>
-
-    <button class="startGame">Start game</button>
+    <button class="start_game">Rozpocznij Grę</button>
     <script src="dist/js/out.js"></script>
 </body>
 </html>
