--- a/index.html
+++ b/index.html
@@ -1,18 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+
+<html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="dist/css/style.css">
-    <title>CodersLab</title>
+    <meta charset="utf-8">
+    <title> Memory </title>
+    <link rel="shortcut icon" href="favicon.ico">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+    <link rel="stylesheet" href="./dist/css/style.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="dist/js/out.js"></script>
 </head>
 <body>
+<span class="loading"></span>
 
-    <div class="plansza">
-    
+<!-- plansza menu poczatkowego -->
+<div class="slide-start" id="stageStart">
+    <div class="start-menu">
+        <a href="#slideGame" class="start-game button" id="startGame">Start</a>
+        <a href="#slideHighscore" class="show-highscore button" id="showHighscore">Pokaż wyniki</a>
     </div>
-    <div class="moves"></div>
+</div>
 
-    <button class="start_game">Rozpocznij Grę</button>
-    <script src="dist/js/out.js"></script>
+<!-- plansza z pobieraniem nazwy gracza -->
+<div class="slide-player-name" id="stagePlayerName">
+    <div class="player-name-box">
+        <label for="playerName">Nazwa gracza:</label>
+        <input type="text" id="playerName" class="player-name" maxlength="10" />
+        <div class="player-name-error">Musisz wpisać nazwę gracza</div>
+        <button class="check-name button" id="checkName">Rozpocznij grę</button>
+    </div>
+</div>
+
+<!-- plansza z gra -->
+<div class="slide-game" id="stageGame">
+    <div class="game-board" id="gameBoard"></div>
+    <div class="game-moves-box">
+        <strong>Liczba ruchów:</strong>
+        <div class="game-moves" id="gameMoves"></div>
+    </div>
+</div>
+
+<!-- tabela z wynikami -->
+<div class="slide-highscore" id="stageHighscore">
+    <h3>Wyniki gry</h3>
+    <div class="highscore-board" id="highscoreBoard"></div>
+    <a href="" class="close-highscore button">Zamknij</a>
+</div>
+
+
 </body>
 </html>
